@@ -4,6 +4,7 @@ import com.sideteam.groupsaver.global.auth.AuthConstants;
 import com.sideteam.groupsaver.global.auth.entrypoint.AuthEntryPointJwt;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -19,23 +20,30 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
 @EnableMethodSecurity
 @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
 @Configuration
-class SecurityConfig {
+public class SecurityConfig {
 
     private final AuthEntryPointJwt unauthorizedHandler;
 
     private final SecurityAdapterConfig securityAdapterConfig;
 
+    @Value("${app.allow-origins}")
+    private List<String> corsOrigins;
+
     private static final String[] publicEndpoints = {
             // API
             "/api/v1/auth/**",
             "/api/v1/test/**",
+
+            // Swagger
+            "/v3/api-docs/**",
+            "/swagger-ui/**", // /swagger-ui/index.html
+            "/swagger-resources/**",
     };
 
     private static final String[] publicReadOnlyPublicEndpoints = {
@@ -69,8 +77,8 @@ class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() { // Localhost 환경 cors
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.addAllowedOrigin("http://localhost:3000");
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
+        configuration.setAllowedOrigins(corsOrigins);
+        configuration.setAllowedMethods(List.of("GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"));
         configuration.setExposedHeaders(List.of(HttpHeaders.AUTHORIZATION, AuthConstants.REFRESH_TOKEN));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
